--- a/tests/test_recipe/let_1.yaml
+++ b/tests/test_recipe/let_1.yaml
@@ -1,3 +1,4 @@
+version: v1.0
 load:
   - as: dg
     path: normalized.dg.json
@@ -5,14 +6,14 @@ extract:
   - into: df
     from: dg
     at:
-      steps: b1, b2, b3
+      indices: [2, 3, 4]
     columns:
       - key: derived->xout->*
         as: xout
   - into: df
     from: dg
     at:
-      step: a
+      index: 1
     columns:
       - key: derived->xin->*
         as: xin
