--- a/.github/workflows/pull-request-commit.yml
+++ b/.github/workflows/pull-request-commit.yml
@@ -45,7 +45,7 @@ jobs:
     strategy:
       matrix:
         pyver: ['3.9']
-        os: ['ubuntu-latest']
+        os: ['windows-latest']
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
