--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -4,7 +4,7 @@ on:
     branches: ['master']
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -18,7 +18,7 @@ jobs:
           path: dist
   test:
     needs: [build]
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -33,7 +33,7 @@ jobs:
       - uses: ./.github/workflows/test-job
   pages:
     needs: [build]
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
