--- a/.github/workflows/pull-request-commit.yml
+++ b/.github/workflows/pull-request-commit.yml
@@ -25,7 +25,7 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        pyver: ['3.9', '3.10']
+        pyver: ['3.8', '3.9', '3.10']
         os: ['ubuntu-latest', 'windows-latest']
     runs-on: ${{ matrix.os }}
     steps:
@@ -37,8 +37,13 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: dist-${{ matrix.os }}-${{ matrix.pyver }}
-      - run: pip install --pre --find-links=. dgbowl-schemas[testing]
-        shell: bash
+      - uses: jannekem/run-python-script-action@v1
+        with:
+          script: |
+            import os
+            import subprocess
+            fn = [f for f in os.listdir() if f.endswith('whl') and f.startswith('dgbowl')][0]
+            subprocess.run(["pip", "install", f"{fn}[testing]"])
       - uses: ./.github/workflows/test-job
   pages:
     needs: [build]
@@ -56,8 +61,13 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: dist-${{ matrix.os }}-${{ matrix.pyver }}
-      - run: pip install --pre --find-links=. dgbowl-schemas[docs]
-        shell: bash
+      - uses: jannekem/run-python-script-action@v1
+        with:
+          script: |
+            import os
+            import subprocess
+            fn = [f for f in os.listdir() if f.endswith('whl') and f.startswith('dgbowl')][0]
+            subprocess.run(["pip", "install", f"{fn}[docs]"])
       - uses: ./.github/workflows/docs-job
       - uses: actions/upload-artifact@v2
         with: 
