--- a/.github/workflows/pull-request-commit.yml
+++ b/.github/workflows/pull-request-commit.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     strategy:
       matrix:
-        pyver: ['3.9', '3.10']
+        pyver: ['3.8', '3.9', '3.10']
         os: ['ubuntu-latest', 'windows-latest']
     runs-on: ${{ matrix.os }}
     steps:
