--- a/.github/workflows/lint-every-pr.yml
+++ b/.github/workflows/lint-every-pr.yml
@@ -16,6 +16,6 @@ jobs:
          DEFAULT_BRANCH: master
          VALIDATE_ALL_CODEBASE: false
          VALIDATE_PYTHON_BLACK: true
-         VALIDATE_PYTHON_MYPY: true
+         VALIDATE_PYTHON_MYPY: false
          VALIDATE_PYTHON_FLAKE8: true
          VALIDATE_PYTHON_PYLINT: true
