--- a/.github/workflows/test-job/action.yml
+++ b/.github/workflows/test-job/action.yml
@@ -3,5 +3,8 @@ description: "Test the package with pytest."
 runs:
   using: "composite"
   steps:
+    - name: Prepare locales
+      run: sudo locale-gen de_DE.UTF-8 en_GB.UTF-8 || echo windows
+      shell: bash
     - run: pytest -vv
       shell: bash
