Switch MYPY on cause cowardice is for the weak.

--- a/.github/workflows/lint-every-pr.yml
+++ b/.github/workflows/lint-every-pr.yml
@@ -18,3 +18,4 @@ jobs:
          VALIDATE_PYTHON_BLACK: true
          VALIDATE_PYTHON_FLAKE8: true
          VALIDATE_PYTHON_PYLINT: true
+         VALIDATE_PYTHON_MYPY: true
