--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [versioneer]
 VCS = git
-style = git-describe
+style = pep440-pre
 versionfile_source = src/dgbowl_schemas/_version.py
 versionfile_build = dgbowl_schemas/_version.py
 tag_prefix =
