--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,7 @@ versionfile_source = src/dgbowl_schemas/_version.py
 versionfile_build = dgbowl_schemas/_version.py
 tag_prefix =
 parentdir_prefix = dgbowl_schemas-
+
+[flake8]
+max-line-length = 88
+extend-ignore = E203
