--- a/.github/workflows/pull-request-commit.yml
+++ b/.github/workflows/pull-request-commit.yml
@@ -6,8 +6,11 @@ jobs:
   build:
     strategy:
       matrix:
-        pyver: ['3.8', '3.9', '3.10']
-        os: ['ubuntu-latest', 'windows-latest']
+        pyver: ['3.9', '3.10', '3.11', '3.12']
+        os: ['ubuntu-latest']
+        include:
+          - pyver: '3.9'
+            os: 'windows-latest'
     uses: ./.github/workflows/workflow-build.yml
     with:
       pyver: ${{ matrix.pyver }}
@@ -16,8 +19,11 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        pyver: ['3.8', '3.9', '3.10']
-        os: ['ubuntu-latest', 'windows-latest']
+        pyver: ['3.9', '3.10', '3.11', '3.12']
+        os: ['ubuntu-latest']
+        include:
+          - pyver: '3.9'
+            os: 'windows-latest'
     uses: ./.github/workflows/workflow-test.yml
     with:
       pyver: ${{ matrix.pyver }}
