--- a/.github/workflows/pull-request-commit.yml
+++ b/.github/workflows/pull-request-commit.yml
@@ -1,75 +1,40 @@
 name: pull-request-commit
 on:
   pull_request:
-    branches:
-      - master
+    branches: ['main']
 jobs:
   build:
     strategy:
       matrix:
-        pyver: ['3.8', '3.9', '3.10']
-        os: ['ubuntu-latest', 'windows-latest']
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.pyver }}
-      - uses: ./.github/workflows/before-job
-      - uses: ./.github/workflows/build-job
-      - uses: actions/upload-artifact@v2
-        with: 
-          name: dist-${{ matrix.os }}-${{ matrix.pyver }}
-          path: dist
+        pyver: ['3.9', '3.10', '3.11', '3.12']
+        os: ['ubuntu-latest']
+        include:
+          - pyver: '3.9'
+            os: 'windows-latest'
+    uses: ./.github/workflows/workflow-build.yml
+    with:
+      pyver: ${{ matrix.pyver }}
+      os: ${{ matrix.os }}
   test:
     needs: [build]
     strategy:
       matrix:
-        pyver: ['3.8', '3.9', '3.10']
-        os: ['ubuntu-latest', 'windows-latest']
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.pyver }}
-      - uses: ./.github/workflows/before-job
-      - uses: actions/download-artifact@v2
-        with:
-          name: dist-${{ matrix.os }}-${{ matrix.pyver }}
-      - uses: jannekem/run-python-script-action@v1
-        with:
-          script: |
-            import os
-            import subprocess
-            fn = [f for f in os.listdir() if f.endswith('whl') and f.startswith('dgbowl')][0]
-            subprocess.run(["pip", "install", f"{fn}[testing]"])
-      - uses: ./.github/workflows/test-job
+        pyver: ['3.9', '3.10', '3.11', '3.12']
+        os: ['ubuntu-latest']
+        include:
+          - pyver: '3.9'
+            os: 'windows-latest'
+    uses: ./.github/workflows/workflow-test.yml
+    with:
+      pyver: ${{ matrix.pyver }}
+      os: ${{ matrix.os }}
   pages:
     needs: [build]
     strategy:
       matrix:
         pyver: ['3.9']
         os: ['ubuntu-latest']
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.pyver }}
-      - uses: ./.github/workflows/before-job
-      - uses: actions/download-artifact@v2
-        with:
-          name: dist-${{ matrix.os }}-${{ matrix.pyver }}
-      - uses: jannekem/run-python-script-action@v1
-        with:
-          script: |
-            import os
-            import subprocess
-            fn = [f for f in os.listdir() if f.endswith('whl') and f.startswith('dgbowl')][0]
-            subprocess.run(["pip", "install", f"{fn}[docs]"])
-      - uses: ./.github/workflows/docs-job
-      - uses: actions/upload-artifact@v2
-        with: 
-          name: public-${{ matrix.os }}-${{ matrix.pyver }}
-          path: public
+    uses: ./.github/workflows/workflow-pages.yml
+    with:
+      pyver: ${{ matrix.pyver }}
+      os: ${{ matrix.os }}
