--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,15 @@ maintainers = [
 ]
 description = "schemas for the dgbowl suite of tools"
 readme = "README.md"
+license = "GPL-3.0-or-later"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
-    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Operating System :: OS Independent",
 ]
 requires-python = ">= 3.9"
